# keystone-sdk

./: .gitignore  macros.cmake
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt
examples/hello-native/: CMakeLists.txt
examples/hello-native-bin/: CMakeLists.txt
examples/hello-native/host/: host_native.cpp
examples/hello-world/: CMakeLists.txt  app.lds
examples/hello-world/eapp/: eapp_native.c
examples/hello-world/host/: host_native.cpp
examples/hello/host/: host.cpp
examples/tests/: CMakeLists.txt
include/app/: eapp_utils.h
include/host/: ElfFile.hpp  Enclave.hpp  KeystoneDevice.hpp  binFile.hpp  common.h  enclaveMemory.hpp  keystone_user.h
src/app/: CMakeLists.txt  init.s
src/host/: CMakeLists.txt  Enclave.cpp  KeystoneDevice.cpp  binFile.cpp  enclaveMemory.cpp
